[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/images/wood_surface.jpg" type="Texture" id=1]
[ext_resource path="res://Beadel.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/images/symbol.png" type="Texture" id=3]
[ext_resource path="res://Main.gd" type="Script" id=4]
[ext_resource path="res://assets/images/beetle_head.png" type="Texture" id=5]
[ext_resource path="res://assets/images/white-background.png" type="Texture" id=6]
[ext_resource path="res://EatenViewport.gd" type="Script" id=7]
[ext_resource path="res://ScoreKeeper.gd" type="Script" id=8]
[ext_resource path="res://MainFSM.gd" type="Script" id=9]
[ext_resource path="res://GUI.tscn" type="PackedScene" id=10]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform sampler2D mask;

void fragment() {
	COLOR = COLOR * texture(mask, UV);
}"

[sub_resource type="ViewportTexture" id=2]
viewport_path = NodePath("EatenViewport")

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/mask = SubResource( 2 )

[node name="Main" type="Node2D"]
script = ExtResource( 4 )

[node name="PlayTimer" type="Timer" parent="."]
wait_time = 30.0

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 9 )

[node name="Symbol" type="Sprite" parent="."]
position = Vector2( 512, 300 )
texture = ExtResource( 3 )

[node name="wood_surface" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.454902 )
material = SubResource( 3 )
position = Vector2( 512.105, 300 )
scale = Vector2( 1.28026, 1 )
texture = ExtResource( 1 )

[node name="Beadel" parent="." instance=ExtResource( 2 )]
position = Vector2( 662, 388 )

[node name="EatenViewport" type="Viewport" parent="."]
size = Vector2( 1024, 600 )
own_world = true
transparent_bg = true
handle_input_locally = false
disable_3d = true
usage = 0
render_target_v_flip = true
render_target_clear_mode = 2
render_target_update_mode = 3
script = ExtResource( 7 )

[node name="BeadelHead" type="Sprite" parent="EatenViewport"]
scale = Vector2( 0.154, 0.099 )
texture = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="EatenViewport"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 6 )

[node name="ScoreKeeper" type="Node" parent="."]
script = ExtResource( 8 )

[node name="GUI" parent="." instance=ExtResource( 10 )]
[connection signal="timeout" from="PlayTimer" to="." method="_on_PlayTimer_timeout"]
[connection signal="eating_started" from="Beadel" to="EatenViewport" method="_on_Beadel_eating_started"]
[connection signal="compare_finished" from="ScoreKeeper" to="." method="_on_ScoreKeeper_compare_finished"]
