[gd_scene load_steps=12 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://MainFSM.gd" type="Script" id=2]
[ext_resource path="res://ScoreKeeper.gd" type="Script" id=3]
[ext_resource path="res://assets/audio/cute_victory.wav" type="AudioStream" id=4]
[ext_resource path="res://Beadel.tscn" type="PackedScene" id=5]
[ext_resource path="res://EatenViewport.tscn" type="PackedScene" id=6]
[ext_resource path="res://GUI.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/images/symbol.png" type="Texture" id=8]
[ext_resource path="res://assets/images/wood_smooth.png" type="Texture" id=9]
[ext_resource path="res://eaten_shader.tres" type="Material" id=10]
[ext_resource path="res://assets/images/wood_rough_masked.png" type="Texture" id=11]

[node name="Level" type="Node2D"]
script = ExtResource( 1 )
time_for_level = 45
next_level = "res://EndGame.tscn"

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 2 )

[node name="PlayTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="Symbol" type="Sprite" parent="."]
position = Vector2( 512, 300 )
texture = ExtResource( 8 )

[node name="WoodUnder" type="Sprite" parent="."]
modulate = Color( 0.827451, 0.662745, 0.380392, 1 )
position = Vector2( 512.105, 300 )
texture = ExtResource( 9 )
flip_h = true
flip_v = true

[node name="WoodSurface" type="Sprite" parent="."]
material = ExtResource( 10 )
position = Vector2( 512.105, 300 )
texture = ExtResource( 9 )

[node name="RoughWood" type="Sprite" parent="."]
position = Vector2( 512.105, 300 )
texture = ExtResource( 11 )

[node name="Beadel" parent="." instance=ExtResource( 5 )]
position = Vector2( 662, 388 )

[node name="EatenViewport" parent="." instance=ExtResource( 6 )]

[node name="ScoreKeeper" type="Node" parent="."]
script = ExtResource( 3 )

[node name="GUI" parent="." instance=ExtResource( 7 )]

[node name="WinMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Stingers"
[connection signal="timeout" from="PlayTimer" to="." method="_on_PlayTimer_timeout"]
[connection signal="compare_finished" from="ScoreKeeper" to="." method="_on_ScoreKeeper_compare_finished"]
[connection signal="next_level_pressed" from="GUI" to="." method="_on_GUI_next_level_pressed"]
